[project]
name = "papnt_ui"
version = "0.1.0"
description = "An application to operate papnt on the UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tirai Basou", email = "tirai.basou@gmail.com" }
]
dependencies = [
  "flet","papnt","arxiv","configparser","bibtexparser"
]

[tool.flet]
org = "com.mycompany"
product = "MyApp"
company = "My Company"
copyright = "Copyright (C) 2025 by My Company"
app.module = "main"
build_number = 1

[tool.flet.app]
path = "src"
